Revert "Update 1.21.1 - Refabricated"